--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <meta name="description" content="Project test Bold" />
-  <title>React App</title>
+  <meta name="description" content="Test Project in Bold" />
+  <title>Test Project in Bold</title>
 </head>
 
 <body>
